--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
         <title>Trillo &mdash; Your all-in-one booking app</title>
     </head>
     <body>
-        Hello.
+        <div class="container">
+            <header class="header">
+                Header
+            </header> 
+            <div class="content">
+                <nav class="sidebar">
+                    Navigation
+                </nav>
+                <main class="hotel-view">
+                    hotel view
+                </main>
+            </div>
+        </div>
+               
     </body>
 </html>
