add description section markup and basic styles

--- a/index.html
+++ b/index.html
@@ -135,6 +135,59 @@
                             <div class="overview__rating--count">4.3k votes</div>
                         </div>
                     </div>
+
+                    <div class="detail">
+
+                        <div class="description">
+                            <p class="paragraph">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi nisi dignissimos debitis ratione sapiente saepe. Accusantium cumque, quas, ut corporis incidunt deserunt quae architecto voluptate.
+                            </p>
+                            <p class="paragraph">
+                                Accusantium cumque, quas, ut corporis incidunt deserunt quae architecto voluptate delectus, inventore iure aliquid aliquam.
+                            </p>
+                            <ul class="list">
+                                <li class="list__item">
+                                    Close to the beach
+                                </li>
+                                <li class="list__item">
+                                    Breakfast Included
+                                </li>
+                                <li class="list__item">
+                                    Free Airport Shuttle
+                                </li>
+                                <li class="list__item">
+                                    Free Wifi
+                                </li>
+                                <li class="list__item">
+                                    Air Conditioning
+                                </li>
+                                <li class="list__item">
+                                    Pets Allowed
+                                </li>
+                                <li class="list__item">
+                                    Multi Lingual Staff
+                                </li>
+                                <li class="list__item">
+                                    Family Appropriate
+                                </li>
+                            </ul>
+                            <div class="reccomend">
+                                <p class="reccoment__count">
+                                    Vandana and 5 others reccomend this hotel
+                                </p>
+                                <p class="reccoment__friends">
+                                    <img src="img/user-3.jpg" alt="user pic" class="reccomend__photo">
+                                    <img src="img/user-4.jpg" alt="user pic" class="reccomend__photo">
+                                    <img src="img/user-5.jpg" alt="user pic" class="reccomend__photo">
+                                    <img src="img/user-6.jpg" alt="user pic" class="reccomend__photo">
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="user-reviews">
+                            User Reviews
+                        </div>
+                    </div>
                 </main>
             </div>
         </div>
