--- a/index.html
+++ b/index.html
@@ -226,6 +226,17 @@
                                 <span>&rarr;</span>
                             </button>
                         </div>
+
+                        
+                    </div>
+                    <div class="cta">
+                        <h2 class="cta__book-now">
+                            Good News! We have 4 rooms available for the selected dates!
+                        </h2>
+                        <button class="btn">
+                            <span class="btn__visible" >Book Now</span>
+                            <span class="btn__invisible">Only 4 rooms left</span>                            
+                        </button>
                     </div>
                 </main>
             </div>
