--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
                     <div class="user-nav__user">
                         <img src="img/user.jpg" alt="user photo" class="user-nav__user-photo">
-                        <span class="user-nav__user-name">Jonas</span>
+                        <span class="user-nav__user-name">John D</span>
                     </div>
                 </nav>
             </header> 
