add credits to design author

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     </ul>
 
                     <div class="legal">
-                        &copy; 2017 by trillo. All rights reserved.
+                        &copy; 2017 by trillo. Design Author Jonas Sonas Schmedtmann. Built buy Sahil Naikdhure.
                     </div>
                 </nav>
                 <main class="hotel-view">
